# wayland-color-test

./: Cargo.toml  README.md  build.rs
.github/workflows/: workflows.yml
src/: cmm.rs  control_pane.rs  main.rs  protocols.rs  singletons.rs  test_pane.rs  vulkan.rs
src/shaders/: fill.frag
src/vulkan_shaders/: fill.common.glsl  fill.frag  fill.vert
src/wgpu_shaders/: horseshoe.wgsl  triangle.wgsl
